--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
            // to decode the credential response.
            const body = { id_token: response.credential };
 
-           fetch('http://localhost:8080/api/auth/google',{
+           fetch('https://localhost:8080/api/auth/google',{
                method: 'POST',
                headers:{
                    'Content-Type':'application/json'
